# excess-properties-dataset

./: .gitignore  LICENSE  README.md  pyproject.toml
data/10.1016--S0378-3812(01)00809-3/: COC(=O)OC---CCCCCCCC.json  COC(=O)OC---CCCCCCCC.jsonc
data/10.1016--j.molliq.2015.06.041/: C1CCOC1---C1CC(=O)OC1.json  CC#N---C1CC(=O)OC1.json  COC(=O)OC---C1CC(=O)OC1.json
data/10.1021--acs.jced.2c00613/: CN1CCN(C)C1=O--O.json
data/10.1021--acs.jced.3c00525/: CC(C)CO--CC(N)CN.json  CCC(C)O--CC(N)CN.json  CCCCO--CC(N)CN.json
data/10.1021--acs.jced.3c00551/: CCCC[N+](CCCC)(CCCC)CCCC.[Br-]--CC(=O)O.json
data/10.1021--acs.jced.4c00686/: COC(C)(C)C--CC(C)O.json
data/10.1021--acs.jced.5b00216/: CC(C)NC(C)C--CC(C)CO.json  CC(C)NC(C)C--CC(C)O.json  CC(C)NC(C)C--CCCCO.json
data/10.1021--acs.jced.5b00724/: O--CC1CCC(=O)O1.json
data/10.1021--acs.jced.5b00838/: CC#N--CCCCCCCOC.json  CC#N--CCCCCCOCC.json  CC#N--CCCCCOC(C)C.json  CC#N--CCCCCOCCC.json  CC#N--CCCCOCC(C)C.json  CC#N--CCCCOCCCC.json
data/10.1021--acs.jced.7b00335/: O=Cc1ccccc1--CC(C)O.json  O=Cc1ccccc1--CCC(C)O.json  O=Cc1ccccc1--CCCC(C)O.json
data/10.1021--acs.jced.7b00429/: CCn1cc[n+](C)c1.O=S(=O)([O-])C(F)(F)F--CC#N.json  CCn1cc[n+](C)c1.O=S(=O)([O-])C(F)(F)F--CS(C)=O.json  CS(C)=O--CC#N.json
data/10.1021--acs.jced.7b00898/: c1[n+](ccn1CCCC#N)C.[B-](F)(F)(F)FCB7543380.mol--CC#N.json
data/10.1021--acs.jced.9b00364/: CNCCO--CCCCOCCO.json  CNCCO--CCOCCO.json  CNCCO--COCCO.json
data/10.1021--je00013a028/: COC(=O)OC---C1CCOC1.json  (+5 more)
test/: test_export.py  test_units.py  test_validate.py  utils.py
(+2150 files in other folders)
