[project]
name = "excess-density"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexius Wadell", email = "awadell@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ilthermopy>=1.1.1.1",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pint>=0.24.4",
    "pints>=0.5.0",
    "pubchempy>=1.0.4",
    "pydantic>=2.11.7",
    "rdkit>=2025.3.3",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]

[project.scripts]
excess-density = "excess_density.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = [".", "test"]
addopts = "--color yes"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

